--- a/invoice/invoice/appsettings.json
+++ b/invoice/invoice/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=invoicedb;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+  }
 }
