--- a/DA-A/DA-A/appsettings.json
+++ b/DA-A/DA-A/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=\SQLEXPRESS02;Database=master;Trusted_Connection=True"
+    "DefaultConnection": ""
   }
 }
 
